src/Test/Fixtures/Good/BitQubit/bitMeasrDeclaration.lf
let singleBit : bit = measr(q);
