src/Test/Fixtures/Bad/BitQubit/unexpectedSecondMeasrInBitDeclaration.lf
let singleBit : bit = measr(q) measr(q);